# viaduck

./: .gitignore  AGENT.md  Dockerfile  LICENSE  README.md  docker-compose.yaml  justfile  pyproject.toml
.flox/: env.json
.flox/env/: manifest.toml
.githooks/: pre-push
.github/workflows/: ci.yaml  promote-to-dev.yaml  promote-to-prod.yaml  release.yaml  semgrep.yaml
docs/: architecture.d2  failure-modes.d2  poll-cycle.d2
grafana/dashboards/: viaduck.json
k8s/: deployment.yaml  pdb.yaml  service.yaml
test/: producer.py  viaduck-dev.yaml
tests/integration/: test_real_pyducklake_attribute_access.py  test_replication_integration.py
tests/perf/: conftest.py  test_fanout_perf.py
tests/unit/: test_config.py  test_destination.py  test_main.py  test_metrics.py  test_pyducklake_api_assumptions.py  test_router.py  test_runtime_deps.py  test_server.py  test_source.py  test_state.py
tla/: Viaduck.cfg  Viaduck.tla
viaduck/: config.py  destination.py  logging_config.py  main.py  metrics.py  router.py  server.py  source.py  state.py
